# Svenssons-Forecast

./: Makefile  README.md  pyproject.toml
basic_code/: const.py  determine_data.py  download_inf.py  format_data.py  formatter.py  load_data.py
basic_code/scripts/: startfile.py
flask_app/: app.py
flask_app/templates/: weather.html
